# clipboard-sync

./: Cargo.toml  clipboard-sync.service  flake.nix
src/: clipboard.rs  main.rs  sync.rs
