[package]
name = "clipboard-sync"
description = " Synchronizes the clipboard across multiple X11 and wayland instances running on the same machine. "
version = "0.2.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
wl-clipboard-rs = "0.9.2"
terminal-clipboard = "0.4.1"
anyhow = "1.0.44"
